--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@replit/database": "^2.0.1",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.3.1",
+    "luxon": "^2.1.1",
     "node": "^16.13.0"
   },
   "devDependencies": {},
