--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # dotenv environment variables file
 .env
 
-# Dependency directories
+# Package Files
 node_modules/
+package-lock.json
 
 # Other environment specific files
+local.patch
 .breakpoints
