--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "0.1.0-canary.0",
-    "@replit/database": "^2.0.1",
     "discord-api-types": "^0.26.0",
     "discord.js": "^13.5.0",
+    "mongoose": "^6.1.4",
     "node": "^17.3.0"
   },
   "devDependencies": {},
