--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "golemheart",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "0.1.0-canary.0",
-    "discord-api-types": "^0.26.0",
-    "discord.js": "^13.5.0",
-    "mongoose": "^6.1.4",
-    "node": "^17.3.0"
+    "@discordjs/rest": "0.2.0-canary.0",
+    "discord-api-types": "^0.26.1",
+    "discord.js": "^13.6.0",
+    "mongoose": "^6.1.7",
+    "node": "^17.3.1"
   },
   "devDependencies": {},
   "scripts": {
@@ -21,7 +21,7 @@
   "author": "Aaron J. Stevenson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wise-io/GolemHeart/issues"
+    "url": "https://golemheart.io/issues"
   },
-  "homepage": "https://github.com/wise-io/GolemHeart#readme"
+  "homepage": "https://docs.golemheart.io/"
 }
