--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "0.2.0-canary.0",
-    "discord-api-types": "^0.26.1",
-    "discord.js": "^13.6.0",
-    "mongoose": "^6.1.7",
-    "node": "^17.3.1"
+    "@discordjs/builders": "0.15.0",
+    "@discordjs/rest": "0.5.0",
+    "discord-api-types": "0.34.0",
+    "discord.js": "13.8.0",
+    "mongoose": "^6.3.8",
+    "node": "^17.7.2"
   },
   "devDependencies": {},
   "scripts": {
