--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "@discordjs/builders": "0.15.0",
-    "@discordjs/rest": "0.5.0",
-    "discord-api-types": "0.35.0",
-    "discord.js": "13.8.1",
-    "mongoose": "^6.4.0",
-    "node": "^17.9.1"
+    "@discordjs/builders": "1.6.3",
+    "@discordjs/rest": "1.7.1",
+    "discord-api-types": "0.37.42",
+    "discord.js": "13.16.0",
+    "mongoose": "6.11.1",
+    "node": "16.20.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "node index.js"
   },
